# alfred-emoji-mate

./: .gitignore  README.md  SETUP.md  alias.py  build.sh  emojis.py  info.plist  main.py  pyproject.toml  release.sh  requirements.sh  requirements.txt
Levenshtein/: __init__.py
emoji/: __init__.py
emoji/emoji/: core.py
emoji/unicode_codes/: __init__.py  data_dict.py
fuzzywuzzy/: StringMatcher.py  process.py
scripts/: build.sh  release.sh
src/: aliases.py  emojis.py  main.py  mate.py  search.py  search_emoji.py  search_text.py
tests/: test_main.py  test_search_emoji.py  test_search_text.py
tests/tests/: test_workflow.py
workflow/: __init__.py  background.py  notify.py  update.py  util.py  web.py  workflow.py  workflow3.py
