[tool.poetry]
name = "alfred-emoji-mate"
version = "1.4.0"
description = "Alfred Workflow to search emojis 🧉"
authors = ["Fede Calendino <fede@calendino.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
emoji = "^1.7.0"
fuzzywuzzy = "^0.18.0"
requests = "^2.28.1"
alfred-pyflow = "^0.1.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
