[tool.poetry]
name = "Emoji Mate"
version = "2.0.1"
description = "Quickly search for emojis"
documentation = "https://github.com/fedecalendino/alfred-emoji-mate/blob/main/README.md"
homepage = "https://github.com/fedecalendino/alfred-emoji-mate"
license = "MIT"

authors = [
    "Fede Calendino <fede@calendino.com>"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
alfred-pyflow = "latest"
emoji = "^2.2.0"
fuzzywuzzy = "^0.18.0"

[tool.poetry.dev-dependencies]
black = "22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
